# cultivation-intelligence

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  init.sql  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data_contracts/: batch_metadata.json  sensor_reading.json
docs/: architecture.md  controls-safety.md  data-model.md  evaluation.md  executive-summary.md  feature-engineering.md  index.md  model-strategy.md  ops-runbook.md  product-brief.md  risk-register.md  roadmap.md  theory.md
docs/adr/: 0001-system-architecture.md  0002-storage-and-data-stack.md  0003-modeling-approach.md  0004-advisory-vs-automation-boundary.md
scripts/: export_features.py  seed_db.py
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/routes/: health.py  ingest.py  predictions.py
src/app/config/: settings.py
src/app/controls/: home_assistant.py  safety.py
src/app/core/: database.py  logging.py
src/app/features/: cultivation.py  pipeline.py
src/app/inference/: service.py
src/app/ingest/: base.py  csv_loader.py  home_assistant.py
src/app/models/: registry.py
src/app/monitoring/: metrics.py
src/app/recommendations/: engine.py
src/app/schemas/: batch.py  prediction.py  sensor.py
src/app/training/: train_baseline.py
tests/: conftest.py  test_config.py  test_features.py  test_health.py  test_safety.py  test_schemas.py
